--- a/pom.xml
+++ b/pom.xml
@@ -20,17 +20,17 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot.version}</version>
+            <version >${spring-boot.version}</version>
         </dependency>
 
         <!-- Stripe Java SDK -->
         <dependency>
             <groupId>com.stripe</groupId>
             <artifactId>stripe-java</artifactId>
-            <version>24.11.0</version>  <!-- Latest version -->
+            <version>24.11.0</version> 
         </dependency>
 
-        <!-- Lombok for reducing boilerplate code -->
+        <!-- Lombok (Compile-time only) -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -38,14 +38,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Logging with Logback -->
         <dependency>
-    <groupId>ch.qos.logback</groupId>
-    <artifactId>logback-classic</artifactId>
-    <version>1.4.11</version> <!-- Use the latest version -->
-</dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.11</version>
+        </dependency>
 
-
-        <!-- Spring Boot DevTools for hot-reloading -->
+        <!-- Spring Boot DevTools (for live reload) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -54,7 +54,7 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- Spring Boot Test (for writing unit tests) -->
+        <!-- Spring Boot Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -62,12 +62,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Javax Annotation -->
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -78,6 +78,21 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
             </plugin>
+
+            <!-- Maven JAR Plugin (Ensures Main-Class in Manifest) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.example.stripepayment.StripePaymentApplication</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
 </project>
