--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- ✅ Add Spring Boot Parent -->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.2</version>
+        <relativePath/>
+    </parent>
+
     <groupId>com.example</groupId>
     <artifactId>stripe-payment</artifactId>
     <version>1.0.0</version>
@@ -12,57 +20,57 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring-boot.version>3.1.2</spring-boot.version>
     </properties>
 
     <dependencies>
-        <!-- Spring Boot Starter Web for REST APIs -->
+        <!-- ✅ Core Spring Boot Starter -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <!-- ✅ Spring Boot Starter Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version >${spring-boot.version}</version>
         </dependency>
 
-        <!-- Stripe Java SDK -->
+        <!-- ✅ Stripe Java SDK -->
         <dependency>
             <groupId>com.stripe</groupId>
             <artifactId>stripe-java</artifactId>
-            <version>24.11.0</version> 
+            <version>24.11.0</version>
         </dependency>
 
-        <!-- Lombok (Compile-time only) -->
+        <!-- ✅ Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.28</version>
             <scope>provided</scope>
         </dependency>
 
-        <!-- Logging with Logback -->
+        <!-- ✅ Logback for Logging -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.11</version>
         </dependency>
 
-        <!-- Spring Boot DevTools (for live reload) -->
+        <!-- ✅ Spring Boot DevTools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <version>${spring-boot.version}</version>
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
 
-        <!-- Spring Boot Test -->
+        <!-- ✅ Spring Boot Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring-boot.version}</version>
             <scope>test</scope>
         </dependency>
 
-        <!-- Javax Annotation -->
+        <!-- ✅ Javax Annotation -->
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
@@ -72,24 +80,12 @@
 
     <build>
         <plugins>
-            <!-- Spring Boot Maven Plugin -->
+            <!-- ✅ Spring Boot Maven Plugin (Defines `mainClass`) -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
-            </plugin>
-
-            <!-- Maven JAR Plugin (Ensures Main-Class in Manifest) -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.4.1</version>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.example.stripepayment.StripePaymentApplication</mainClass>
-                        </manifest>
-                    </archive>
+                    <mainClass>com.example.StripePayment.StripePaymentApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
